Fix z-index header

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -182,7 +182,7 @@ header {
   top: 0;
   width: 100%;
   height: 80px;
-  z-index: 2;
+  z-index: 3;
   background-color: white;
   h1 {
   
@@ -547,7 +547,7 @@ footer {
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 3;
+  z-index: 999;
   background-color: rgba(0, 0, 0, 0.815);
   display: flex;
   justify-content: center;
